src/test/examples/custom/valid/class/simpleClassInstantiate.wacc
# Simple Class instantiation

begin
  class H is 
    private int v
    H(int v) 
    end
    private int J(int v) is 
      return 0
    end
  end
  H p = new H(2)
end